tools/gd/src/render/snapshots/gd__render__tests__snapshot_line_map.snap
---
source: gd/src/render.rs
expression: output.line_map
---
[
    LineInfo {
        file_idx: 0,
        path: "f.rs",
        new_lineno: None,
        old_lineno: None,
        line_kind: None,
        hunk_idx: None,
    },
    LineInfo {
        file_idx: 0,
        path: "f.rs",
        new_lineno: Some(
            1,
        ),
        old_lineno: Some(
            1,
        ),
        line_kind: Some(
            Context,
        ),
        hunk_idx: Some(
            0,
        ),
    },
    LineInfo {
        file_idx: 0,
        path: "f.rs",
        new_lineno: Some(
            2,
        ),
        old_lineno: None,
        line_kind: Some(
            Added,
        ),
        hunk_idx: Some(
            0,
        ),
    },
    LineInfo {
        file_idx: 0,
        path: "f.rs",
        new_lineno: Some(
            3,
        ),
        old_lineno: Some(
            2,
        ),
        line_kind: Some(
            Context,
        ),
        hunk_idx: Some(
            0,
        ),
    },
]
