tools/gd/src/render/snapshots/gd__render__tests__snapshot_multi_file_skip_headers.snap
---
source: gd/src/render.rs
expression: stripped
---
   1 |   1 | first
     |   2 |+second

   1 |   1 | keep
   2 |     |-remove
