tools/gd/src/render/snapshots/gd__render__tests__snapshot_untracked_file.snap
---
source: gd/src/render.rs
expression: strip(&output.lines())
---
── new.rs (Untracked) ──────────────────────────────────────────────────────────
     |   1 |+hello
     |   2 |+world
